@@ -26,6 +26,7 @@
 //=======External Functions This Runner Calls=====
 extern void setUp(void);
 extern void tearDown(void);
+void resetTest(void);
 extern void test_PeerRestart(void);
 extern void test_SysUnspecified(void);
 extern void test_ClockCodeExists(void);
@@ -48,10 +49,10 @@ int main(int argc, char *argv[])
   progname = argv[0];
   Unity.TestFile = "statestr.c";
   UnityBegin("statestr.c");
-  RUN_TEST(test_PeerRestart, 20);
-  RUN_TEST(test_SysUnspecified, 24);
-  RUN_TEST(test_ClockCodeExists, 29);
-  RUN_TEST(test_ClockCodeUnknown, 33);
+  RUN_TEST(test_PeerRestart, 12);
+  RUN_TEST(test_SysUnspecified, 18);
+  RUN_TEST(test_ClockCodeExists, 25);
+  RUN_TEST(test_ClockCodeUnknown, 31);
 
   return (UnityEnd());
 }
